--- a/public/index.html
+++ b/public/index.html
@@ -122,17 +122,17 @@
       
       <div class="blah w-100">
         <h1 class="f3 fw1 athelas mt0 lh-title">
-          <a href="/GatewayPBX/zh-cn/xswitch/gateway/" class="color-inherit dim link">
+          <a href="/GatewayPBX/zh-cn/xswitch/fxs/" class="color-inherit dim link">
             FXS 与 xswitch
             </a>
         </h1>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
-          xswitch xswitch 是一个基于 Freeswitch 的 PBX. 基于云部署的方式方便测试.
-创建分机 成功安装后第一步在 PBX 创建分机, 如下图. 不要混淆名称和号码, 分机 这里我们使用分机 1019, 1020
-网关注册 配置 VOIPServer FXS 网关完成基本的网络/时间配置后第一步就是创建编辑对应的 PBX 服务器信息. 如下图. 通常端口为 5060, 具体以 PBX 端开放监听的地址/端口为准.
-端口配置分机 FXS 需要为每个端口配置分机, 然后在端口上连接电话线到模拟话机即可. 若注册成功将看到如下显示. 在状态页面也可以查看注册状态. 拨打测试 模拟话机 1019 拨打 1020, 在状态页面能看见通话中的标识. 能正常的呼入/呼入,即与 xswitch 联合使用配置成功完成.
+          XSwitch XSwitch 是一个基于 FreeSwitch 的 PBX. 基于 docker 云部署的方式进行测试. 在此测试 G 系列 FXS网关与 FreeSwitch 的兼容性.
+创建分机 成功安装 PBX 环境后第一步在 PBX 创建分机(具体查看 Xswitch 使用手册), 如下图. 不要混淆名称和号码, 这里我们使用分机 1019, 1020.
+网关注册 配置 VOIPServer FXS 网关完成基本的网络/时间配置后, 第一步就是创建编辑对应的 PBX 服务器信息. 如下图. 通常端口为 5060, 具体以 PBX 端开放监听的地址/端口为准.
+端口配置分机 FXS 需要为每个端口配置分机, 然后在端口上连接电话线到模拟话机即可. 若注册成功将看到如下显示. 在状态页面也可以查看注册状态. 拨打测试 模拟话机 1019 拨打 1020, 在状态页面能看见通话中的标识. 能正常的呼入/呼入,即与 XSwitch 联合使用配置成功完成.
         </div>
-          <a href="/GatewayPBX/zh-cn/xswitch/gateway/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1"></a>
+          <a href="/GatewayPBX/zh-cn/xswitch/fxs/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1"></a>
         
       </div>
     </div>
